--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,3 +4,8 @@ $col-primary-dark: #28b485;
 $color-black: #000;
 $color-grey-dark: #777;
 $color-white: #fff;
+
+//GRID
+$gutter-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
