--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,7 @@
 @import "pages/home";
 @import "components/button";
 @import "layout/header";
-
-/*
+@import "layout/grid"; /*
 COLORS:
 
 Light green: #7ed56f
