Building the about section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,15 @@
-$col-primary: #7ed56f;
-$col-primary-light: #55c57a;
+$col-primary: #55c57a;
+$col-primary-light: #7ed56f;
 $col-primary-dark: #28b485;
 $color-black: #000;
 $color-grey-dark: #777;
+$color-grey-light-1: #f7f7f7;
 $color-white: #fff;
 
 //GRID
 $gutter-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// FONT
+$default-font-size: 1.6rem;
