--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,7 +8,7 @@
     border-radius: 10rem;
     transition: all 0.2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
   }
 
   &:hover {
@@ -51,5 +51,27 @@
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    color: $col-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $col-primary;
+    padding: 3px;
+  }
+
+  &:hover {
+    background-color: $col-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
+  }
+  &:active {
+    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.15);
+    transform: translateY(0);
   }
 }
