--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "pages/home";
 @import "components/button";
 @import "components/composition.scss";
+@import "components/feature-box.scss";
 @import "layout/header";
 @import "layout/grid"; /*
 COLORS:
