--- a/sass/components/composition.scss
+++ b/sass/components/composition.scss
@@ -23,7 +23,7 @@
     }
 
     &:hover {
-      outline: 1.5rem solid $col-primary;
+      outline: 1.5rem solid $color-primary;
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
       transform: scale(1.05) translateY(-0.5rem);
       z-index: 20;
