--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,14 @@
       background-color: $color-white;
     }
   }
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
 
   &::after {
     content: "";
@@ -57,15 +65,15 @@
 .btn-text {
   &:link,
   &:visited {
-    color: $col-primary;
+    color: $color-primary;
     display: inline-block;
     text-decoration: none;
-    border-bottom: 1px solid $col-primary;
+    border-bottom: 1px solid $color-primary;
     padding: 3px;
   }
 
   &:hover {
-    background-color: $col-primary;
+    background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
     transform: translateY(-2px);
