--- a/sass/components/feature-box.scss
+++ b/sass/components/feature-box.scss
@@ -16,8 +16,8 @@
     margin-bottom: 0.5rem;
     background-image: linear-gradient(
       to right,
-      $col-primary-light,
-      $col-primary-dark
+      $color-primary-light,
+      $color-primary-dark
     );
     -webkit-background-clip: text;
     color: transparent;
