--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,8 @@
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba($col-primary-light, 0.8),
-      rgba($col-primary-dark, 0.8)
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
     url(../img/hero.jpg);
   background-position: top;
