--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/button";
 @import "components/composition.scss";
 @import "components/feature-box.scss";
+@import "components/card";
 @import "layout/header";
 @import "layout/grid"; /*
 COLORS:
