--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,8 +8,8 @@
   padding: 20rem 0;
   background-image: linear-gradient(
       to right bottom,
-      rgba($col-primary-light, 0.8),
-      rgba($col-primary-dark, 0.8)
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
     url(../img/Nat-4.jpg);
   background-size: cover;
@@ -19,4 +19,10 @@
   & > * {
     transform: skewY(7deg);
   }
+}
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
 }
