--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,9 @@
 @import "components/composition.scss";
 @import "components/feature-box.scss";
 @import "components/card";
+@import "components/story";
+@import "components/bg-video";
+
 @import "layout/header";
 @import "layout/grid"; /*
 COLORS:
